# telegram-delbot

./: Cargo.toml
src/: main.rs
