[package]
name = "telegram-delbot"
version = "0.0.1"
authors = ["Evgeny Kurnevsky <kurnevsky@gmail.com>"]
license = "AGPL-3.0+"
description = "Telegram bot that can delete its messages"
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["macros"]}
futures = "0.3"
telegram-bot = "0.7"
